--- a/app/styles/curso.css
+++ b/app/styles/curso.css
@@ -9,15 +9,16 @@
 @media(width>=768px){
     .curso{
         background-color: rgb(22, 22, 22);
-       .contenido{
-        grid-column: 2/3;
-        .texto{
-            color: white;
-            text-align: center;
-            font-size: 2.4rem;
-        }
-       }
     }
+    .curso .contenido{
+        grid-column: 2/3;
+    }
+    .curso .contenido .texto{
+        color: white;
+        text-align: center;
+        font-size: 2.4rem;
+    }
+
     .curso-grid{
         display: grid;
         grid-template-columns: repeat(2,1fr);
